# AdventOfCode2024

./: pyproject.toml
01/: 01-a.py  01-b.py  01.py
02/: 02-a.py  02-b.py  02.py
03/: 03-a.py  03-b.py  03.py
03/04/: 04.py
04/: 04-a.py  04-b.py
05/: 05-a.py  05-b.py  05.py
06/: 06-b.py  06.py
07/: 07-a.py  07-b.py
08/: 08-a.py  08-b.py
09/: 09-a.py  09-b.py
10/: 10-a.py  10-b.py
11/: 11-a.py
12/: 12-a.py
13/: 13.py
14/: 14.py
helpers/: helpers.py
