[tool.poetry]
name = "adventofcode2024"
version = "0.1.0"
description = ""
authors = ["Mark Jackson <mark.jackson@red-gate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
